# helloWorld

./: CMakeLists.txt  README.md  helloWorld.cpp
.github/workflows/: ci-for-helloWorld.yml  cmake-multi-platform.yml
ci/: ci-printos.bash
cmake/: utils.cmake
cmake/modules/: FindAcesContainer.cmake  FindImath.cmake
